# ChangeLog for media-video/ffmpegthumbnailer
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ffmpegthumbnailer-2.0.9 (16 Aug 2014)

  16 Aug 2014; Poncho <poncho@spahan.ch> +ffmpegthumbnailer-2.0.9.ebuild,
  -ffmpegthumbnailer-2.0.8.ebuild, -files/ffmpegthumbnailer-2.0.8-memcpy.patch,
  metadata.xml:
  media-video/ffmpegthumbnailer: version bump

  05 Apr 2013; Samuli Suominen <ssuominen@gentoo.org>
  ffmpegthumbnailer-2.0.8.ebuild:
  Use subslot for the libpng dependency.

  05 Apr 2013; Samuli Suominen <ssuominen@gentoo.org>
  -ffmpegthumbnailer-2.0.7-r1.ebuild,
  -files/ffmpegthumbnailer-2.0.7-r238-r241.patch:
  old

  05 Apr 2013; Samuli Suominen <ssuominen@gentoo.org>
  ffmpegthumbnailer-2.0.8.ebuild, +files/ffmpegthumbnailer-2.0.8-memcpy.patch:
  Include <cstring> for memcpy() because it's no longer implicitly pulled in by
  libpng since 1.6.0.

  01 Dec 2012; Raúl Porcel <armin76@gentoo.org>
  ffmpegthumbnailer-2.0.8.ebuild:
  alpha/ia64/sparc stable wrt #441408

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
  ffmpegthumbnailer-2.0.8.ebuild:
  Stable for x86, wrt bug #441408

  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> ffmpegthumbnailer-2.0.8.ebuild:
  Stable for HPPA (bug #441408).

  06 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
  ffmpegthumbnailer-2.0.8.ebuild:
  Stable for amd64, wrt bug #441408

  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
  ffmpegthumbnailer-2.0.8.ebuild:
  stable arm, bug #441408

  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
  ffmpegthumbnailer-2.0.8.ebuild:
  stable ppc ppc64, bug #441408

  20 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
  -ffmpegthumbnailer-2.0.7.ebuild:
  old

*ffmpegthumbnailer-2.0.8 (20 Sep 2012)

  20 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
  +ffmpegthumbnailer-2.0.8.ebuild:
  Version bump.

  05 Aug 2012; Raúl Porcel <armin76@gentoo.org>
  ffmpegthumbnailer-2.0.7-r1.ebuild:
  alpha/ia64/sparc stable wrt #422133
