@@ -1,4 +1,4 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -8,6 +8,7 @@ inherit eutils libtool
 DESCRIPTION="Lightweight video thumbnailer that can be used by file managers"
 HOMEPAGE="http://code.google.com/p/ffmpegthumbnailer/"
 SRC_URI="https://docs.google.com/uc?export=download&id=0B-HAKhnW2w9WMWVsdmhRdHJsOHM -> ${P}.tar.gz"
+# https://drive.google.com/folderview?id=0B-HAKhnW2w9WQ091bWlDMzFDTmM&usp=sharing#list
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -16,7 +17,7 @@ IUSE="gnome gtk jpeg png"
 
 COMMON_DEPEND=">=virtual/ffmpeg-0.10.2
 	png? ( media-libs/libpng:0= )
-	jpeg? ( virtual/jpeg )"
+	jpeg? ( virtual/jpeg:62 )"
 RDEPEND="${COMMON_DEPEND}
 	gtk? ( >=dev-libs/glib-2.30 )"
 DEPEND="${COMMON_DEPEND}
