@@ -1,6 +1,9 @@
 # ChangeLog for media-video/ffmpegthumbnailer
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  14 Mar 2015; Poncho <poncho@spahan.ch> ffmpegthumbnailer-2.0.9.ebuild:
+  media-video/ffmpegthumbnailer: add comment and slot
 
 *ffmpegthumbnailer-2.0.9 (16 Aug 2014)
 
